po: update po/fr_CA/grant.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_CA/grant.po
+++ b/po/fr_CA/grant.po
@@ -8,12 +8,13 @@
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Pierre Mathieu <pierrem7@gmail.com>, 2013
 # Piotr Szotkowski <chastell@chastell.net>, 2011
+# Rick Paré, 2016
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2016-05-09 13:33-0400\n"
-"PO-Revision-Date: 2016-08-29 16:58+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"POT-Creation-Date: 2016-10-05 11:33-0400\n"
+"PO-Revision-Date: 2016-11-25 21:55+0000\n"
+"Last-Translator: Rick Paré\n"
 "Language-Team: French (Canada) (http://www.transifex.com/civicrm/civicrm/language/fr_CA/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -31,7 +32,7 @@ msgstr "Date de transfert du montant de la subvention est NULL."
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Application Received Date is NULL"
-msgstr "Date de réception de l'application de la subvention est NULL."
+msgstr "Date de réception de la demande de subvention est NULL"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Due Date is NULL"
@@ -43,23 +44,23 @@ msgstr "Date de la décision de la subvention est NULL."
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
-msgstr "Date de réception de l'application - à partir de "
+msgstr "Date de réception de la demande - À partir de "
 
 #: CRM/Grant/BAO/Query.php
 msgid "Money Sent Date - From"
-msgstr "Dates d'envois de l'argent - à partir de"
+msgstr "Date d'envoi de l'argent - À partir de"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Report Due Date - From"
-msgstr "Rapport de la date d'échéance - à partir de"
+msgstr "Date d'échéance du rapport - À partir de"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date - From"
-msgstr "Dates de la décision de la subvention - à partir de"
+msgstr "Date de la décision de la subvention - À partir de"
 
 #: CRM/Grant/BAO/Query.php
 msgid "Grant report received?"
-msgstr "Suvention (rapport reçus ?)"
+msgstr "Rapport de subvention reçu?"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Grant ID"
@@ -67,7 +68,7 @@ msgstr "ID de la subvention"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Application received date"
-msgstr "Date de réception de l'application"
+msgstr "Date de réception de la demande"
 
 #: CRM/Grant/DAO/Grant.php
 msgid "Decision date"
@@ -99,11 +100,11 @@ msgstr "Raison de la subvention"
 
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
-msgstr "Rapport de subvention reçu ?"
+msgstr "Rapport de subvention reçu?"
 
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
-msgstr "Montant requis<br />(devise initiale)"
+msgstr "Montant demandé<br />(devise d'origine)"
 
 #: CRM/Grant/Form/Grant.php
 msgid "Applicant"
@@ -193,15 +194,15 @@ msgstr "Êtes-vous sûr de vouloir supprimer cette subvention ?"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Amount requested for grant in original currency (if different)."
-msgstr "Montant demandé pour une subvention dans la devise courante (si différent)."
+msgstr "Montant demandé pour la subvention dans la devise d'origine (si tel est le cas)."
 
 #: templates/CRM/Grant/Form/Grant.tpl templates/CRM/Grant/Form/Task/Update.tpl
 msgid "Date on which the grant decision was finalized."
-msgstr "Date à laquelle la décision de subvention a été finalisée :"
+msgstr "Date à laquelle la décision de subvention a été finalisée."
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Date on which the grant money was transferred."
-msgstr "Date à laquelle l'argent de la subventin a été transféré"
+msgstr "Date à laquelle l'argent de la subvention a été transféré."
 
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
@@ -209,7 +210,7 @@ msgstr "(devise initiale)"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Status(s)"
-msgstr "Statut(s) de la subvention"
+msgstr "Statut(s) de subvention"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Grant Type(s)"
@@ -227,7 +228,7 @@ msgstr "si vous cherchez par nom de contact, vérifiez l'orthographe"
 msgid ""
 "Use this form to find Grant(s) by Contact name, Grant Status, Grant Type, "
 "Total Amount , etc ."
-msgstr "Utilisez ce formulaire pour trouver une(des) subvention(s) par le nom de contact, le status de la subvention, le type de subvention, le montant total, ..."
+msgstr "Utilisez ce formulaire pour trouver les subventions par nom de contact, statuts de subvention, types de subvention, montant total, etc."
 
 #: templates/CRM/Grant/Form/Selector.tpl
 msgid "List more Grants"
@@ -270,7 +271,7 @@ msgid ""
 "the grantee. Once you've located or created the contact record, click "
 "<strong>View</strong> to go to their summary page, select the "
 "<strong>Grants</strong> tab and click <strong>New Grant</strong>."
-msgstr "CiviGrant vous permet de saisir et de suivre les subventions aux organismes, individus ou les foyers. Le bénéficiaire doit d'abord être inscrit comme un contact dans CiviCRM. Utilisez <a href='%1'> trouver des contacts </a> pour voir si il ya déjà un enregistrement pour le bénéficiaire. Une fois que vous avez créés ou trouvé l'enregistrement de contact, cliquez sur <strong> Affichage </strong> pour accéder à leur page de résumé, sélectionnez l'option <strong> subventions </strong> et cliquez sur <strong> nouvelle subvention </strong>."
+msgstr "CiviGrant vous permet de saisir et de suivre les subventions aux organismes, aux personnes ou aux ménages. Le bénéficiaire doit d'abord être inscrit comme un contact dans CiviCRM. Utilisez <a href='%1'>Rechercher des contacts</a> pour voir si une fiche existe déjà pour le bénéficiaire. Une fois que vous avez créé ou trouvé la fiche de contact, cliquez sur <strong>Consulter</strong> pour accéder à leur page de résumé, sélectionnez l'option <strong>Subventions</strong> et cliquez sur <strong>Nouvelle subvention</strong>."
 
 #: templates/CRM/Grant/Page/DashBoard.tpl
 msgid "Grants Summary"
@@ -316,8 +317,8 @@ msgstr "Aucune subvention n'a été enregistrée pour ce contact."
 
 #: CRM/Grant/Task.php
 msgid "Export grants"
-msgstr ""
+msgstr "Exporter les subventions"
 
 #: CRM/Grant/Task.php
 msgid "Update grants"
-msgstr ""
+msgstr "Mettre à jour les subventions"
