--- a/po/sr_RS@latin/campaign.po
+++ b/po/sr_RS@latin/campaign.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-22 13:50+0000\n"
+"PO-Revision-Date: 2016-11-25 08:10+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -169,7 +169,7 @@ msgstr "Anketa modifikovana"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "Survey Modified On"
-msgstr ""
+msgstr "Anketa modifikovana"
 
 #: CRM/Campaign/DAO/Survey.php
 msgid "No Email Verification"
@@ -213,11 +213,11 @@ msgstr ""
 msgid ""
 "Oops. It looks like no surveys have been created. <a href='%1'>Click here to"
 " create a new survey.</a>"
-msgstr ""
+msgstr "Ups. Ankete nisu kreirane. <a href='%1'>Kliknite ovde da kreirate novu anketu.</a>"
 
 #: CRM/Campaign/Form/Gotv.php CRM/Campaign/Form/Task/Interview.php
 msgid "Could not find Survey."
-msgstr ""
+msgstr "Anketa nije pronađena."
 
 #: CRM/Campaign/Form/Petition/Signature.php
 msgid "Sign the Petition"
