po: update po/fr_FR/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/fr_FR/admin.po
+++ b/po/fr_FR/admin.po
@@ -36,8 +36,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-15 00:04+0000\n"
-"Last-Translator: Vincent Tercelin <vincent.tercelin@gmail.com>\n"
+"PO-Revision-Date: 2016-11-26 17:26+0000\n"
+"Last-Translator: Philippe SAMPONT <PhilippeS@cncd.be>\n"
 "Language-Team: French (http://www.transifex.com/civicrm/civicrm/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3141,7 +3141,7 @@ msgstr "Contrôle l'affichage des groupes dynamiques dont chaque contact fait pa
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid "Individual Name Fields"
-msgstr ""
+msgstr "Champs de nom"
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid "Other Panes"
@@ -3180,7 +3180,7 @@ msgstr "Si activé, les contacts à qui des activités sont assignées recevront
 msgid ""
 "When enabled, the assignee notification sent out above will also include an "
 "ical meeting invite."
-msgstr ""
+msgstr "Si activée, la notification envoyée ci-dessus inclura aussi une invitation de réunion iCal."
 
 #: templates/CRM/Admin/Form/Preferences/Display.tpl
 msgid ""
@@ -3641,7 +3641,7 @@ msgid ""
 "provinces are available in the State/Province selection field <strong>for "
 "Custom Fields</strong> or for Profile forms which do NOT include a Country "
 "field."
-msgstr ""
+msgstr "Les listes de choix de subdivision de pays (province pour le Canada et la Belgique, département pour la France, etc.) sont affichées dynamiquement en fonction du pays choisi dans tous les formulaires standard d'édition d'adresse de contact, ainsi que dans les <strong>formulaires personnalisés qui incluent à la fois un champ Pays et un champ de subdivision de pays</strong>. Dans le cas des <strong>champs personnalisés</strong> ou formulaires personnalisés qui n'incluent PAS un champ Pays, ce paramètre permet de choisir les subdivisions des pays qui seront proposés dans le champ de sélection de subdivision de pays."
 
 #: templates/CRM/Admin/Form/Setting/Localization.tpl
 msgid "Multiple Languages Support"
