--- a/po/sr_RS@latin/admin.po
+++ b/po/sr_RS@latin/admin.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-25 19:39+0000\n"
+"PO-Revision-Date: 2016-11-26 08:41+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -1125,7 +1125,7 @@ msgstr "Samo vreme"
 
 #: CRM/Admin/Form/Setting/Date.php
 msgid "Fiscal Year Start"
-msgstr ""
+msgstr "Početak fiskalne godine"
 
 #: CRM/Admin/Form/Setting/Debugging.php
 msgid " Settings - Debugging and Error Handling "
@@ -1171,7 +1171,7 @@ msgstr "Uključi više jezika"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Inherit CMS Language"
-msgstr ""
+msgstr "Preuzmi jezik iz CMS-a"
 
 #: CRM/Admin/Form/Setting/Localization.php
 msgid "Thousands Separator"
