po: update po/sr_RS@latin/contribute.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/contribute.po
+++ b/po/sr_RS@latin/contribute.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-23 15:55+0000\n"
+"PO-Revision-Date: 2016-11-26 09:31+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -242,11 +242,11 @@ msgstr ""
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Donors"
-msgstr ""
+msgstr "Donatora"
 
 #: CRM/Contribute/BAO/Widget.php
 msgid "Learn more."
-msgstr ""
+msgstr "Saznaj više"
 
 #: CRM/Contribute/DAO/Contribution.php CRM/Contribute/DAO/ContributionPage.php
 msgid "Contribution Page ID"
@@ -258,15 +258,15 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Cancel Reason"
-msgstr ""
+msgstr "Razlog otkazivanja"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Thank-you Date"
-msgstr ""
+msgstr "Datum zahvalnice"
 
 #: CRM/Contribute/DAO/Contribution.php
 msgid "Amount Label"
-msgstr ""
+msgstr "Iznos - oznaka"
 
 #: CRM/Contribute/DAO/Contribution.php
 #: CRM/Contribute/DAO/ContributionRecur.php
@@ -354,7 +354,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Send email Receipt"
-msgstr ""
+msgstr "Pošalji email sa priznanicom"
 
 #: CRM/Contribute/DAO/ContributionPage.php
 msgid "Receipt From email"
@@ -455,7 +455,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/ContributionRecur.php
 msgid "Send email Receipt?"
-msgstr ""
+msgstr "Pošalji email sa priznanicom?"
 
 #: CRM/Contribute/DAO/ContributionSoft.php
 msgid "Soft Contribution ID"
@@ -551,7 +551,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Product.php
 msgid "Cost"
-msgstr ""
+msgstr "Cena"
 
 #: CRM/Contribute/DAO/Product.php CRM/Contribute/Form/ManagePremiums.php
 msgid "Period Type"
@@ -559,11 +559,11 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Product.php CRM/Contribute/Form/ManagePremiums.php
 msgid "Duration Unit"
-msgstr ""
+msgstr "Jedinica trajanja"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Url Logo"
-msgstr ""
+msgstr "Url Logotipa"
 
 #: CRM/Contribute/DAO/Widget.php
 #: CRM/Contribute/Form/ContributionPage/Widget.php
@@ -572,7 +572,7 @@ msgstr ""
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Url Homepage"
-msgstr ""
+msgstr "Url - Naslovna"
 
 #: CRM/Contribute/DAO/Widget.php
 msgid "Color Title"
@@ -618,23 +618,23 @@ msgstr ""
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Membership for %1 has been Cancelled."
-msgstr ""
+msgstr "Članstvo za %2 je otkazano."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Membership for %1 has been Expired."
-msgstr ""
+msgstr "Članstvo za %1 je isteklo."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Membership for %1 has been updated. The membership End Date is %2."
-msgstr ""
+msgstr "Članstvo za %1 je ažurirano. Datum kraja članstva je %2."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Event Registration for %1 has been Cancelled."
-msgstr ""
+msgstr "Registracija za događaj %1 je otkazana."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Event Registration for %1 has been updated."
-msgstr ""
+msgstr "Registracija za događaj %1 je ažurirana."
 
 #: CRM/Contribute/Form/AbstractEditPayment.php
 msgid "Pledge Payment for %1 has been Cancelled."
@@ -674,7 +674,7 @@ msgstr ""
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 msgid "Fulfilled"
-msgstr ""
+msgstr "Ispunjeno"
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: CRM/Contribute/Form/ManagePremiums.php
@@ -685,7 +685,7 @@ msgstr ""
 #: templates/CRM/Contribute/Form/ContributionView.tpl
 #: templates/CRM/Contribute/Form/Task/Print.tpl
 msgid "Thank-you Sent"
-msgstr ""
+msgstr "Zahvalnica poslata"
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "Please enter a valid monetary value for Non-deductible Amount."
@@ -720,7 +720,7 @@ msgstr ""
 #: CRM/Contribute/Form/AdditionalInfo.php
 #: CRM/Contribute/Form/ContributionPage/Amount.php
 msgid "Send up to"
-msgstr ""
+msgstr "Pošalji do "
 
 #: CRM/Contribute/Form/AdditionalInfo.php
 msgid "Please enter a valid No. of reminders."
