--- a/po/sr_RS@latin/install.po
+++ b/po/sr_RS@latin/install.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-23 14:51+0000\n"
+"PO-Revision-Date: 2016-11-27 09:50+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -486,7 +486,7 @@ msgstr "Sve je spremno za instalaciju!"
 
 #: install/template.html
 msgid "Check Requirements and Install CiviCRM"
-msgstr ""
+msgstr "Proveri zahteve i instaliraj CiviCRM"
 
 #: install/template.html
 msgid "Installing CiviCRM..."
@@ -571,7 +571,7 @@ msgstr "Ostala podešavanja"
 
 #: install/template.html
 msgid "Re-check requirements"
-msgstr ""
+msgstr "Ponovo proveri zahteve"
 
 #: install/template.html
 msgid "CiviCRM Database Details"
@@ -583,7 +583,7 @@ msgstr "Drupal detalji baze podataka"
 
 #: install/template.html
 msgid "Requirements"
-msgstr ""
+msgstr "Zahtevi"
 
 #: install/index.php
 msgid "[your Backdrop root directory]"
