po: update po/sr_RS@latin/menu.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/sr_RS@latin/menu.po
+++ b/po/sr_RS@latin/menu.po
@@ -9,7 +9,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-23 14:56+0000\n"
+"PO-Revision-Date: 2016-11-27 09:48+0000\n"
 "Last-Translator: Đorđe Kolaković <djordje@catalystbalkans.org>\n"
 "Language-Team: Serbian (Latin) (Serbia) (http://www.transifex.com/civicrm/civicrm/language/sr_RS@latin/)\n"
 "MIME-Version: 1.0\n"
@@ -115,16 +115,16 @@ msgstr "CiviCase kontrolna tabla"
 
 msgctxt "menu"
 msgid "Open Case"
-msgstr ""
+msgstr "Otvori predmet"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Find Cases"
-msgstr ""
+msgstr "Nađi predmete"
 
 msgctxt "menu"
 msgid "Case Activity"
-msgstr ""
+msgstr "Predmet - aktivnost"
 
 msgctxt "menu"
 msgid "Case Activity Audit"
@@ -136,7 +136,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Case"
-msgstr ""
+msgstr "Predmet"
 
 msgctxt "menu"
 msgid "Activity View"
@@ -144,7 +144,7 @@ msgstr "Pregled aktivnosti"
 
 msgctxt "menu"
 msgid "Assign to Another Client"
-msgstr ""
+msgstr "Dodeli drugom klijentu"
 
 msgctxt "menu"
 msgid "File on Case"
@@ -152,12 +152,12 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
-msgstr ""
+msgstr "Predmet - detalji"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Case Types"
-msgstr ""
+msgstr "Tipovi predmeta"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -167,7 +167,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Case Statuses"
-msgstr ""
+msgstr "Statusi predmeta"
 
 msgctxt "menu"
 msgid "Encounter Mediums"
@@ -206,7 +206,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Membership Section"
-msgstr ""
+msgstr "Sekcija članstva"
 
 msgctxt "menu"
 msgid "Include Profiles"
@@ -214,7 +214,7 @@ msgstr "Uključi profile"
 
 msgctxt "menu"
 msgid "Thank-you and Receipting"
-msgstr ""
+msgstr "Zahvalnice i priznanice"
 
 msgctxt "menu"
 msgid "Tell a Friend"
@@ -226,7 +226,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Premiums"
-msgstr ""
+msgstr "Premiumi"
 
 msgctxt "menu"
 msgid "Add Products to This Page"
@@ -244,11 +244,11 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Types"
-msgstr ""
+msgstr "Finansijski tipovi"
 
 msgctxt "menu"
 msgid "New Payment"
-msgstr ""
+msgstr "Novo plaćanje"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -263,7 +263,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Accepted Credit Cards"
-msgstr ""
+msgstr "Prihvaćene kreditne kartice"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -300,7 +300,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Cancel Subscription"
-msgstr ""
+msgstr "Otkaži pretplatu"
 
 msgctxt "menu"
 msgid "Update Billing Details"
@@ -308,7 +308,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Update Subscription"
-msgstr ""
+msgstr "Ažuriraj pretplatu"
 
 msgctxt "menu"
 msgid "Financial Type Accounts"
@@ -334,7 +334,7 @@ msgstr "Vidi uplatu"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviContribute Component Settings"
-msgstr ""
+msgstr "Podešavanja CiviContribute komponente"
 
 msgctxt "menu"
 msgid "PDF Invoice"
@@ -448,7 +448,7 @@ msgstr "Tipovi kontakata"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Gender Options"
-msgstr ""
+msgstr "Opcije za pol"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -458,7 +458,7 @@ msgstr "Pojedinačni prefiksi (gospodine, gospođo...)"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Individual Suffixes (Jr, Sr...)"
-msgstr ""
+msgstr "Individualni sufiksi (Jr, Sr...)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -482,7 +482,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Phone Type"
-msgstr ""
+msgstr "Tip telefona"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -542,7 +542,7 @@ msgstr "Željeni metod komunikacije"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Label Formats"
-msgstr ""
+msgstr "Formati oznake"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -552,12 +552,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Communication Style Options"
-msgstr ""
+msgstr "Stil komunikacije - opcije"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Email Greeting Formats"
-msgstr ""
+msgstr "Format email pozdrava"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -622,7 +622,7 @@ msgstr "Ažuriranje baze podataka"
 
 msgctxt "menu"
 msgid "Outbound Email Settings"
-msgstr ""
+msgstr "Odlazna pošta - podešavanja"
 
 msgctxt "menu"
 msgid "Payment Processor"
@@ -674,7 +674,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Debugging"
-msgstr ""
+msgstr "Debugging"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -684,21 +684,21 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviEvent Component Settings"
-msgstr ""
+msgstr "Podešavanja CiviEvent komponente"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviMail Component Settings"
-msgstr ""
+msgstr "Podešavanja CiviMail komponente"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviMember Component Settings"
-msgstr ""
+msgstr "Podešavanja CiviMember komponente"
 
 msgctxt "menu"
 msgid "View Date Preferences"
-msgstr ""
+msgstr "Pogledaj podešavanja datuma"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -712,7 +712,7 @@ msgstr "Log zakazanih poslova"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Grant Types"
-msgstr ""
+msgstr "Tipovi granta"
 
 msgctxt "menu"
 msgid "Payment Processor Type"
@@ -824,11 +824,11 @@ msgstr "Pošalji email kontaktu"
 
 msgctxt "menu"
 msgid "Map Location(s)"
-msgstr ""
+msgstr "Mapa - lokacija (lokacije)"
 
 msgctxt "menu"
 msgid "Map Event Location"
-msgstr ""
+msgstr "Mapiraj lokaciju događaja"
 
 msgctxt "menu"
 msgid "Contact Summary"
@@ -846,7 +846,7 @@ msgstr "Aktivnosti"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Relationships"
-msgstr ""
+msgstr "Odnosi-veze"
 
 msgctxt "menu"
 msgid "Groups"
@@ -997,11 +997,11 @@ msgstr ""
 
 msgctxt "menu"
 msgid "QUnit"
-msgstr ""
+msgstr "QUnit"
 
 msgctxt "menu"
 msgid "ProfileEditor"
-msgstr ""
+msgstr "Editor profila"
 
 msgctxt "menu"
 msgid "Confirm dates"
@@ -1013,7 +1013,7 @@ msgstr "Kreiranje CiviCRM profila"
 
 msgctxt "menu"
 msgid "CiviEvent Dashboard"
-msgstr ""
+msgstr "CiviEvent kontrolna tabla"
 
 msgctxt "menu"
 msgid "Register New Participant"
@@ -1087,7 +1087,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Event Info and Settings"
-msgstr ""
+msgstr "Informacije i podešavanja događaja"
 
 msgctxt "menu"
 msgid "Event Location"
@@ -1117,7 +1117,7 @@ msgstr "Novi događaj"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Import Participants"
-msgstr ""
+msgstr "Import učesnika"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1146,7 +1146,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "CiviGrant Dashboard"
-msgstr ""
+msgstr "CiviGrant kontrolna tabla"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1272,11 +1272,11 @@ msgstr "Nađi članstva"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Import Memberships"
-msgstr ""
+msgstr "Import članstva"
 
 msgctxt "menu"
 msgid "CiviPledge Dashboard"
-msgstr ""
+msgstr "CiviPledge kontrolna tabla"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1342,17 +1342,17 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "My Cases"
-msgstr ""
+msgstr "Moji predmeti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "All Cases"
-msgstr ""
+msgstr "Svi predmeti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Home"
-msgstr ""
+msgstr "Naslovna"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1362,7 +1362,7 @@ msgstr "Pretraga"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Full-text Search"
-msgstr ""
+msgstr "Full-text Search"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1442,17 +1442,17 @@ msgstr "Izveštaji o događajima"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mailings"
-msgstr ""
+msgstr "Mailing"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Draft and Unscheduled Mailings"
-msgstr ""
+msgstr "Mailing - u pripremi i nezakazani"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Scheduled and Sent Mailings"
-msgstr ""
+msgstr "Mailing - zakazani i poslati"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1462,7 +1462,7 @@ msgstr "Arhivirani mailing"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mailing Reports"
-msgstr ""
+msgstr "Mailing izveštaji"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1522,17 +1522,17 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Cases"
-msgstr ""
+msgstr "Predmeti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Case"
-msgstr ""
+msgstr "Novi predmet"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Case Reports"
-msgstr ""
+msgstr "Izveštaji o predmetima"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1572,7 +1572,7 @@ msgstr "Opcije za padajući meni"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Phone Types"
-msgstr ""
+msgstr "Tipovi telefona"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1612,7 +1612,7 @@ msgstr "Podešavanja sistema"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Connections"
-msgstr ""
+msgstr "Povezivanja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1732,7 +1732,7 @@ msgstr "Registruj sajt"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Join CiviCRM"
-msgstr ""
+msgstr "Pridruži se CiviCRM-u"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1747,7 +1747,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Developer Docs"
-msgstr ""
+msgstr "Developer dokumenta"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1893,7 +1893,7 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Top Donors"
-msgstr ""
+msgstr "Top donatori"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1980,12 +1980,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Membership Summary"
-msgstr ""
+msgstr "Kratak opis članstva"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides a summary of memberships by type and join date."
-msgstr ""
+msgstr "Daje kratak opis članstva po tipu i datumu priključenja."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1998,7 +1998,7 @@ msgid ""
 "Provides a list of members along with their membership status and membership"
 " details (Join Date, Start Date, End Date). Can also display contributions "
 "(payments) associated with each membership."
-msgstr ""
+msgstr "Daje listu članova sa statusom i detaljima članstva (Datum priključenja, datum početka, datum završetka). Može prikazati i donacije (plaćanja) povezana sa svakim  članstvom."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2028,12 +2028,12 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Provides lists of participants for an event."
-msgstr ""
+msgstr "Daje listu učesnika za događaj."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Event Income Summary"
-msgstr ""
+msgstr "Kratak pregled prihoda događaja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2041,19 +2041,19 @@ msgid ""
 "Provides an overview of event income. You can include key information such "
 "as event ID, registration, attendance, and income generated to help you "
 "determine the success of an event."
-msgstr ""
+msgstr "Daje pregled prihoda događaja. Može prikazivati ključne informacije kao što je ID događaja, registracija, prisustvo i prihod kako bi se mogao odrediti uspeh događaja."
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Event Income Details"
-msgstr ""
+msgstr "Detalji prihoda događaja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid ""
 "Helps you to analyze the income generated by an event. The report can "
 "include details by participant type, status and payment method."
-msgstr ""
+msgstr "Pomaže pri analizi prihoda ostvarenih tokom događaja. Izveštaj može da uključuje tip učesnika, status i metod plaćanja"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2098,17 +2098,17 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mailing Summary"
-msgstr ""
+msgstr "Kratak pregled mailing-a"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Summary statistics for mailings"
-msgstr ""
+msgstr "Kratak pregled statistika mailing-a"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mail Opened"
-msgstr ""
+msgstr "Mail otvoren"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2160,7 +2160,7 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Configure CKEditor"
-msgstr ""
+msgstr "Konfiguracija CKEditor-a"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -2211,12 +2211,12 @@ msgstr "Detalji o aktivnosti"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Activity Summary"
-msgstr ""
+msgstr "Kratak pregled aktivnosti"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Shows activity statistics by type / date"
-msgstr ""
+msgstr "Prikazuje statistike aktivnosti po tipu / datumu"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
