--- a/po/es_ES/report.po
+++ b/po/es_ES/report.po
@@ -9,7 +9,7 @@
 # Estefanía Mediavilla <e.mediavilla@ixiam.com>, 2014
 # fmcooke <fmcooke@yahoo.com>, 2012
 # fmcooke <fmcooke@yahoo.com>, 2012
-# francescbassas <francesc@babu.cat>, 2014-2015
+# francescbassas <francesc@babu.cat>, 2014-2016
 # ixiam <info@ixiam.com>, 2013,2016
 # Irene Estefania <iestefania@ndi.org>, 2015
 # iWi development <iwidevelopment@gmail.com>, 2012
@@ -22,8 +22,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-10-05 15:41+0000\n"
-"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"PO-Revision-Date: 2016-11-28 12:36+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Spanish (http://www.transifex.com/civicrm/civicrm/language/es/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -2304,7 +2304,7 @@ msgstr ""
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "Bounce Date"
-msgstr "Porcentaje de rebote"
+msgstr "Fecha de retorno"
 
 #: CRM/Report/Form/Mailing/Bounce.php
 msgid "On hold"
