po: update po/ca_ES/admin.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/ca_ES/admin.po
+++ b/po/ca_ES/admin.po
@@ -16,8 +16,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
 "POT-Creation-Date: 2016-10-05 11:33-0400\n"
-"PO-Revision-Date: 2016-11-17 10:33+0000\n"
-"Last-Translator: ixiam <info@ixiam.com>\n"
+"PO-Revision-Date: 2016-11-29 23:01+0000\n"
+"Last-Translator: francescbassas <francesc@babu.cat>\n"
 "Language-Team: Catalan (http://www.transifex.com/civicrm/civicrm/language/ca/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -268,11 +268,11 @@ msgstr ""
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Return-Path"
-msgstr "Ruta de devolució de email "
+msgstr "Return-Path"
 
 #: CRM/Admin/Form/MailSettings.php
 msgid "Return-Path must use a valid email address format."
-msgstr "La ruta de retorn ha de tenir un format d'adreça de correu electrònic vàlida."
+msgstr "Return-Path ha d'utilitzar un format d'adreça de correu electrònic vàlid."
 
 #: CRM/Admin/Form/MailSettings.php templates/CRM/Admin/Page/MailSettings.tpl
 msgid "Server"
@@ -2537,7 +2537,7 @@ msgstr "Domini de la direcció de correu electrònic (la part després de @)."
 
 #: templates/CRM/Admin/Form/MailSettings.tpl
 msgid "Contents of the Return-Path header."
-msgstr "Contingut de la capçalera de la ruta de tornada "
+msgstr "Contingut de la capçalera Return-Path."
 
 #: templates/CRM/Admin/Form/MailSettings.tpl
 msgid "Name of the protocol to use for polling."
